--- a/Source/Ensure.UnitTests/Ensure.UnitTests.csproj
+++ b/Source/Ensure.UnitTests/Ensure.UnitTests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IsNotEmptyTests.cs" />
     <Compile Include="IsNotNullTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
