--- a/Source/Ensure.UnitTests/Ensure.UnitTests.csproj
+++ b/Source/Ensure.UnitTests/Ensure.UnitTests.csproj
@@ -45,9 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IsNotEmptyTests.cs" />
     <Compile Include="IsNotNullTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
