--- a/Source/EnsureGuardClause.UnitTests/EnsureGuardClause.UnitTests.csproj
+++ b/Source/EnsureGuardClause.UnitTests/EnsureGuardClause.UnitTests.csproj
@@ -34,7 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.7.1\lib\net40\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,17 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IsNotNullTests.cs" />
+    <Compile Include="ObjectExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionTests.cs" />
+    <Compile Include="Stubs\BasicStubOne.cs" />
+    <Compile Include="Stubs\BasicStubTwo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ensure\Ensure.csproj">
+    <ProjectReference Include="..\EnsureGuardClause\EnsureGuardClause.csproj">
       <Project>{b5776aa0-a83f-46a9-a25b-f0e53110aea7}</Project>
-      <Name>Ensure</Name>
+      <Name>EnsureGuardClause</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
