--- a/Source/EnsureGuardClause.UnitTests/packages.config
+++ b/Source/EnsureGuardClause.UnitTests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="coveralls.net" version="0.7.0" targetFramework="net461" developmentDependency="true" />
-  <package id="NUnit" version="3.7.1" targetFramework="net40" requireReinstallation="true" />
+  <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net40" />
 </packages>
