--- a/appvayor.yml
+++ b/appvayor.yml
@@ -34,10 +34,10 @@ hosts:
   api.nuget.org: 93.184.221.200
 
 before_build:
-  - cmd: nuget restore .\Source\EnsureGuardClause.sln
+  - cmd: nuget restore .\Source\Ensure.sln
 
 build:
-  project: .\Source\EnsureGuardClause.sln
+  project: .\Source\Ensure.sln
   publish_nuget: true
   verbosity: minimal
 
